--- a/visualization-02-am-updated-tanishq.ipynb
+++ b/visualization-02-am-updated-tanishq.ipynb
@@ -46,6 +46,36 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "6f4b3ab8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load skills list\n",
+    "skills_df = pd.read_csv(\"/Users/tanishq/Documents/STA631/Project_Information_Visualization/data/raw/list_of_skills.csv\")\n",
+    "skills_list = skills_df.iloc[:, 0].dropna().str.lower().str.strip().unique().tolist()\n",
+    "\n",
+    "# Convert Polars to Pandas\n",
+    "df_pd = df.to_pandas()\n",
+    "\n",
+    "# Extract skills from job descriptions\n",
+    "def extract_skills(text):\n",
+    "    if pd.isna(text):\n",
+    "        return []\n",
+    "    text_lower = text.lower()\n",
+    "    return [skill for skill in skills_list if skill in text_lower]\n",
+    "\n",
+    "df_pd[\"Matched Skills\"] = df_pd[\"Job Description\"].apply(extract_skills)\n",
+    "\n",
+    "# Convert back to Polars\n",
+    "df = pl.from_pandas(df_pd)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "7520fe9cc4429b4a",
    "metadata": {
     "ExecuteTime": {
@@ -64,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "13ab6285e01f3107",
    "metadata": {
     "ExecuteTime": {
@@ -81,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b34b5b84cfd7632d",
    "metadata": {
     "ExecuteTime": {
@@ -112,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7837bcb59b8daffb",
    "metadata": {
     "ExecuteTime": {
@@ -125,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16072/3819414285.py:4: DeprecationWarning: `pl.count()` is deprecated. Please use `pl.len()` instead.\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/3819414285.py:4: DeprecationWarning: `pl.count()` is deprecated. Please use `pl.len()` instead.\n",
       "  top_hiring_dept = df.group_by(\"Agency\").agg(pl.count()).sort(\"count\", descending=True)[0, \"Agency\"]\n"
      ]
     }
@@ -140,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "78cb3e55ac5f7a42",
    "metadata": {
     "ExecuteTime": {
@@ -287,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8420974ae6930a67",
    "metadata": {
     "ExecuteTime": {
@@ -297,17 +327,13 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# Charts and maps\n",
     "def create_top_skills_chart(filtered_df=None):\n",
     "    if filtered_df is not None and len(filtered_df) > 0:\n",
     "        df_skills_filtered = filtered_df.select([\n",
     "            pl.col(\"Salary Range From\").alias(\"Salary From\"),\n",
     "            pl.col(\"Salary Range To\").alias(\"Salary To\"),\n",
-    "            pl.col(\"Preferred Skills\").alias(\"Skills\")\n",
-    "        ]).drop_nulls().with_columns([\n",
-    "            pl.col(\"Skills\").str.split(\",\").alias(\"Skill List\")\n",
-    "        ]).explode(\"Skill List\").with_columns([\n",
+    "            pl.col(\"Matched Skills\").alias(\"Skill List\")\n",
+    "        ]).drop_nulls().explode(\"Skill List\").with_columns([\n",
     "            pl.col(\"Skill List\").str.strip_chars().str.to_lowercase().alias(\"Skill\"),\n",
     "            ((pl.col(\"Salary From\") + pl.col(\"Salary To\")) / 2).alias(\"Avg Salary\")\n",
     "        ])\n",
@@ -321,7 +347,6 @@
     "    else:\n",
     "        data = skill_salary_summary.filter(pl.col(\"Job Count\") > 5)[:15].to_pandas()\n",
     "\n",
-    "    # Format for better display\n",
     "    data[\"Avg Salary\"] = data[\"Avg Salary\"].round(0).astype(int)\n",
     "\n",
     "    fig = px.bar(\n",
@@ -334,16 +359,13 @@
     "        color_continuous_scale=px.colors.sequential.Blues\n",
     "    )\n",
     "\n",
-    "    fig.update_traces(\n",
-    "        texttemplate='%{text}',\n",
-    "        textposition='outside'\n",
-    "    )\n",
+    "    fig.update_traces(texttemplate='%{text}', textposition='outside')\n",
     "\n",
     "    fig.update_layout(\n",
     "        template=\"plotly_white\",\n",
     "        margin=dict(t=30, b=50, l=50, r=30),\n",
     "        yaxis_title=\"Average Salary ($)\",\n",
-    "        xaxis={'categoryorder':'total descending'}\n",
+    "        xaxis={'categoryorder': 'total descending'}\n",
     "    )\n",
     "\n",
     "    return fig"
@@ -351,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9376cd9b6c2632f3",
    "metadata": {
     "ExecuteTime": {
@@ -441,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8943c6899abea928",
    "metadata": {
     "ExecuteTime": {
@@ -561,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "edf24a34cb843637",
    "metadata": {
     "ExecuteTime": {
@@ -647,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a9a31fe65c8de7d3",
    "metadata": {
     "ExecuteTime": {
@@ -663,7 +685,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            src=\"http://127.0.0.1:8051/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -671,7 +693,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x13ecf93d0>"
+       "<IPython.lib.display.IFrame at 0x1487a1310>"
       ]
      },
      "metadata": {},
@@ -681,35 +703,67 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16072/3131555223.py:54: DeprecationWarning:\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/3131555223.py:54: DeprecationWarning:\n",
       "\n",
       "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
       "\n",
-      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16072/567746787.py:7: DeprecationWarning:\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/567746787.py:7: DeprecationWarning:\n",
       "\n",
       "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
       "\n",
-      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16072/3131555223.py:54: DeprecationWarning:\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/3131555223.py:54: DeprecationWarning:\n",
       "\n",
       "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
       "\n",
-      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16072/567746787.py:7: DeprecationWarning:\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/567746787.py:7: DeprecationWarning:\n",
       "\n",
       "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
       "\n",
-      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16072/3131555223.py:54: DeprecationWarning:\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/3131555223.py:54: DeprecationWarning:\n",
       "\n",
       "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
       "\n",
-      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16072/567746787.py:7: DeprecationWarning:\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/567746787.py:7: DeprecationWarning:\n",
       "\n",
       "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
       "\n",
-      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16072/3131555223.py:54: DeprecationWarning:\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/3131555223.py:54: DeprecationWarning:\n",
       "\n",
       "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
       "\n",
-      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16072/567746787.py:7: DeprecationWarning:\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/567746787.py:7: DeprecationWarning:\n",
+      "\n",
+      "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
+      "\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/3131555223.py:54: DeprecationWarning:\n",
+      "\n",
+      "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
+      "\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/567746787.py:7: DeprecationWarning:\n",
+      "\n",
+      "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
+      "\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/3131555223.py:54: DeprecationWarning:\n",
+      "\n",
+      "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
+      "\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/567746787.py:7: DeprecationWarning:\n",
+      "\n",
+      "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
+      "\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/3131555223.py:54: DeprecationWarning:\n",
+      "\n",
+      "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
+      "\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/567746787.py:7: DeprecationWarning:\n",
+      "\n",
+      "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
+      "\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/3131555223.py:54: DeprecationWarning:\n",
+      "\n",
+      "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
+      "\n",
+      "/var/folders/n9/1990wv_n7kb_zgy7ywv315_h0000gn/T/ipykernel_16480/567746787.py:7: DeprecationWarning:\n",
       "\n",
       "`pl.count()` is deprecated. Please use `pl.len()` instead.\n",
       "\n"
@@ -717,9 +771,8 @@
     }
    ],
    "source": [
-    "\n",
     "if __name__ == '__main__':\n",
-    "    app.run(debug=True)"
+    "    app.run(debug=True, port=8051)"
    ]
   }
  ],
